--- a/index.html
+++ b/index.html
@@ -14,5 +14,35 @@
 
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__inner container">
+        <a class="header__logo logo" href="/">
+          <img class="logo__image" src="./images/logo.svg" alt="Positivus" height="36" width="220" loading="lazy" />
+        </a>
+        <nav class="header__nav">
+          <ul class="menu menu_orientation_horizontal">
+            <li class="menu__item">
+              <a class="menu__link" href="/#about-us">About us</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/#services">Services</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/#use-cases">Use Cases</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/#pricing">Pricing</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="/#blog">Blog</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="header__button button" type="button">Request a quote</button>
+
+        <button class="header__burger-button burger-button" type="button"></button>
+      </div>
+    </header>
+  </body>
 </html>
