--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
     <header class="header">
       <div class="header__inner container">
         <a class="header__logo logo" href="/">
-          <img class="logo__image" src="./images/logo.svg" alt="Positivus" height="36" width="220" loading="lazy" />
+          <img
+            class="logo__image"
+            src="./images/logo.svg"
+            alt="Positivus company"
+            height="36"
+            width="220"
+            loading="lazy"
+          />
         </a>
-        <nav class="header__nav">
+        <nav class="header__nav" aria-label="Main navigation">
           <ul class="menu menu_orientation_horizontal">
             <li class="menu__item">
               <a class="menu__link" href="/#about-us">About us</a>
@@ -41,7 +48,9 @@
         </nav>
         <button class="header__button button" type="button">Request a quote</button>
 
-        <button class="header__burger-button burger-button" type="button"></button>
+        <button class="header__burger-button burger-button" type="button">
+          <span class="visually-hidden">Toggle mobile menu</span>
+        </button>
       </div>
     </header>
   </body>
