--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <nav class="header__nav" aria-label="Main navigation">
           <ul class="menu menu_orientation_horizontal">
             <li class="menu__item">
-              <a class="menu__link" href="/#about-us">About us</a>
+              <a class="menu__link" href="/about-us">About us</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="/#services">Services</a>
+              <a class="menu__link" href="/services">Services</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="/#use-cases">Use Cases</a>
+              <a class="menu__link" href="/use-cases">Use Cases</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="/#pricing">Pricing</a>
+              <a class="menu__link" href="/pricing">Pricing</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="/#blog">Blog</a>
+              <a class="menu__link" href="/blog">Blog</a>
             </li>
           </ul>
         </nav>
