feat(button): create reusable button component

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
           </ul>
         </nav>
-        <button class="header__button button" type="button">Request a quote</button>
+        <button class="header__button button button_theme_transparent" type="button">Request a quote</button>
 
         <button class="header__burger-button burger-button" type="button">
           <span class="visually-hidden">Toggle mobile menu</span>
