feat(header): implement header component styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           />
         </a>
         <nav class="header__nav" aria-label="Main navigation">
-          <ul class="menu menu_orientation_horizontal">
+          <ul class="menu menu_orientation_horizontal menu_gap-40">
             <li class="menu__item">
               <a class="menu__link" href="/about-us">About us</a>
             </li>
@@ -46,6 +46,7 @@
             </li>
           </ul>
         </nav>
+
         <button class="header__button button button_theme_transparent" type="button">Request a quote</button>
 
         <button class="header__burger-button burger-button" type="button">
