--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             loading="lazy"
           />
         </a>
-        <nav class="header__nav" aria-label="Main navigation">
+        <nav class="header__nav hidden-tablet" aria-label="Main navigation">
           <ul class="menu menu_orientation_horizontal menu_gap-40">
             <li class="menu__item">
               <a class="menu__link" href="/about-us">About us</a>
@@ -47,9 +47,11 @@
           </ul>
         </nav>
 
-        <button class="header__button button button_theme_transparent" type="button">Request a quote</button>
+        <button class="header__button button button_theme_transparent hidden-tablet" type="button">
+          Request a quote
+        </button>
 
-        <button class="header__burger-button burger-button" type="button">
+        <button class="header__burger-button burger-button visible-tablet" type="button">
           <span class="visually-hidden">Toggle mobile menu</span>
         </button>
       </div>
