feat(header): create adaptive header for all device types

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           />
         </a>
         <nav class="header__nav hidden-tablet" aria-label="Main navigation">
-          <ul class="menu menu_orientation_horizontal menu_gap-40">
+          <ul class="menu menu_orientation_horizontal menu_gap-30">
             <li class="menu__item">
               <a class="menu__link" href="/about-us">About us</a>
             </li>
@@ -47,11 +47,11 @@
           </ul>
         </nav>
 
-        <button class="header__button button button_theme_transparent hidden-tablet" type="button">
+        <button class="header__button button button_theme_transparent hidden-mobile" type="button">
           Request a quote
         </button>
 
-        <button class="header__burger-button burger-button visible-tablet" type="button">
+        <button class="header__burger-button burger-button visible-mobile" type="button">
           <span class="visually-hidden">Toggle mobile menu</span>
         </button>
       </div>
